workloads/music-stack/base/feishin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: feishin-deployment
  labels:
    app: feishin-deployment

spec:
  replicas: 1
  revisionHistoryLimit: 1

  selector:
    matchLabels:
      app: feishin-pod

  template:
    metadata:
      labels:
        app: feishin-pod

    spec:
      containers:
        - name: feishin
          image: ghcr.io/jeffvli/feishin:latest

          ports:
            - containerPort: 9180
              name: feishin-http

          # resources:
          #   limits:
          #     memory: 0Mi
          #     cpu:  0m
          #   requests:
          #         cpu: 0m
          #         memory: 0Mi

          # startupProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 4533
          #
          # livenessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 4533
          #
          # readinessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 4533
